--- a/.github/workflows/release-beta.yaml
+++ b/.github/workflows/release-beta.yaml
@@ -33,7 +33,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event.pull_request_target.head.ref || github.ref_name }}
+          ref: ${{ github.event.pull_request.head.ref || github.ref_name }}
+          repository: ${{ github.event.pull_request.head.repo.full_name || github.repository }}
 
       - name: 设置 pnpm
         uses: pnpm/action-setup@v4
@@ -43,7 +44,7 @@ jobs:
       - name: 生成 Beta 版本号
         id: set-version
         run: |
-          branch=${{ github.event.pull_request_target.head.ref || github.ref_name }}
+          branch=${{ github.event.pull_request.head.ref || github.ref_name }}
           git fetch origin $branch --depth=100
           git checkout $branch
           RELEASE_BRANCH="release-please--branches--main--components--git-neko-kit"
@@ -80,7 +81,7 @@ jobs:
       - name: 获取构建时间
         id: get-build-timestamp
         run: |
-          branch=${{ github.event.pull_request_target.head.ref || github.ref_name }}
+          branch=${{ github.event.pull_request.head.ref || github.ref_name }}
           git fetch origin $branch --depth=1
           BUILD_TIMESTAMP_UTC=$(git show -s --format=%cd --date=iso-strict origin/$branch)
           echo "BUILD_TIMESTAMP_UTC=$BUILD_TIMESTAMP_UTC"
@@ -97,7 +98,8 @@ jobs:
       - name: 检出代码
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.pull_request_target.head.ref || github.ref_name }}
+          ref: ${{ github.event.pull_request.head.ref || github.ref_name }}
+          repository: ${{ github.event.pull_request.head.repo.full_name || github.repository }}
 
       - name: 设置 pnpm
         uses: pnpm/action-setup@v4
@@ -118,11 +120,6 @@ jobs:
         with:
           name: ${{ needs.beta-version.outputs.package_short_name }}
           path: ${{ runner.temp }}/temp/
-      
-      - name: 获取主分支的最新提交消息
-        id: commit-message
-        run: |
-          echo "commit_msg=$(git log origin/${{ github.event.pull_request_target.head.ref || github.ref_name }} -1 --pretty=format:'%s')" >> $GITHUB_ENV
 
   publish-to-pkg-pr-new:
     needs: [beta-version, build]
@@ -181,7 +178,7 @@ jobs:
           pr-number: ${{ github.event.pull_request_target.number }}
           message: |
             🎉 🎉 🎉 **构建完成！**
-            该版本是基于 `${{ github.event.pull_request_target.head.ref || github.ref_name }}` 分支的快照 [**`${{ needs.beta-version.outputs.short_commit_hash }}`**](https://github.com/${{ github.repository }}/commit/${{ needs.beta-version.outputs.short_commit_hash }}) 所构建的。
+            该版本是基于 `${{ github.event.pull_request.head.ref || github.ref_name }}` 分支的快照 [**`${{ needs.beta-version.outputs.short_commit_hash }}`**](https://github.com/${{ github.repository }}/commit/${{ needs.beta-version.outputs.short_commit_hash }}) 所构建的。
 
             你可以通过以下命令安装该版本：
             ```
